# simulation-controller

./: .gitignore  Cargo.toml  PROJECT-SPECIFICATION.md  README.md  double_chain.toml  star.toml  test.toml  test1.toml  test3.toml  test4.toml
__MACOSX/client_video/client1/: ._videos
config_files/: butterfly.toml  butterfly_4clients.toml  subnet.toml  subnet_4clients.toml  test.toml  test1.toml  test3.toml  test4.toml  tree.toml
initialization_files/client_audio/client-20/: songs_metadata.json
initialization_files/client_audio/client-20/songs/numb/: playlist.m3u8  segment13.ts  segment20.ts  segment23.ts  segment3.ts  segment5.ts  segment6.ts  segment8.ts
initialization_files/client_audio/client-20/songs/stairwaytoheaven/: playlist.m3u8
initialization_files/client_audio/client-20/songs/youtopia/: segment12.ts  segment21.ts
initialization_files/client_audio/client1/: songs_metadata.json
initialization_files/client_audio/client1/songs/dancinginthestardust/: segment1.ts  segment10.ts  segment11.ts  segment17.ts  segment18.ts  segment23.ts  segment6.ts
initialization_files/client_audio/client1/songs/homeforchristmas/: segment0.ts  segment10.ts  segment11.ts  segment13.ts  segment5.ts
initialization_files/client_audio/client1/songs/numb/: segment1.ts  segment15.ts  segment17.ts  segment22.ts  segment25.ts  segment27.ts  segment4.ts
initialization_files/client_audio/client1/songs/stairwaytoheaven/: segment9.ts
initialization_files/client_audio/client1/songs/universalfrequencies/: segment11.ts  segment18.ts  segment24.ts  segment28.ts  segment7.ts
initialization_files/client_audio/client1/songs/youtopia/: segment0.ts  segment19.ts  segment3.ts
initialization_files/client_audio/client2/: songs_metadata.json
initialization_files/client_audio/client2/songs/billiejean/: segment0.ts  segment16.ts  segment19.ts
initialization_files/client_audio/client2/songs/bloodandthunder/: segment2.ts  segment22.ts  segment4.ts  segment9.ts
initialization_files/client_audio/client2/songs/lonelyday/: segment12.ts  (+2 more)
initialization_files/client_audio/client3/: songs_metadata.json
initialization_files/client_audio/songs/numb/: segment10.ts  segment12.ts  segment14.ts  segment2.ts  segment21.ts  segment26.ts  segment9.ts
initialization_files/client_audio/songs/stairwaytoheaven/: segment1.ts  segment2.ts  segment4.ts  segment6.ts  segment8.ts
initialization_files/client_audio/songs/youtopia/: playlist.m3u8  segment13.ts  segment14.ts  segment15.ts  segment16.ts  segment20.ts  segment5.ts  segment7.ts  segment8.ts
initialization_files/client_video/: video_metadata.json
initialization_files/client_video/client1/: video_metadata.json
initialization_files/client_video/client2/: video_metadata.json
initialization_files/client_video/client3/: video_metadata.json
initialization_files/server/: init_songs.json
initialization_files/server/server1/: init_songs.json  init_videos.json
initialization_files/server/server2/: init_songs.json  init_videos.json
src/: main.rs  real_main.rs  utils.rs
ui/: app-window.slint
ui/components/: client_server.slint  drone.slint  edge.slint  left_menu.slint  legend.slint  message.slint  right_menu.slint  up_window.slint
ui/structs/: client_server.slint  drone.slint  edge.slint  message.slint
(+265 files in other folders)
