[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.9.1"
rfd = "0.15.1"
crossbeam = "0.8.4"
# network-initializer = { git = "ssh://git@github.com/Rusteze-AP/network-initializer.git", branch = "main" }
network-initializer = { path = "../network-initializer" }
wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }
rusteze_drone = { git = "ssh://git@github.com/Rusteze-AP/drone.git", branch = "main" }
client = { git = "ssh://git@github.com/Rusteze-AP/client.git", branch = "rocket" }
# client = { path = "../client"}
server = { git = "ssh://git@github.com/Rusteze-AP/server.git", branch = "main" }
logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }
packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packet-forge.git", branch = "main" }
# packet_forge = { path = "../packet-forge" }


[build-dependencies]
slint-build = "1.8.0"
