[package]
name = "simulation-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9.1"
rfd = "0.15.1"
crossbeam = "0.8.4"
ctrlc = "3.1"


wg_internal = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = [
    "debug",
] }

client-video = { git = "ssh://git@github.com/Rusteze-AP/client-video.git", branch = "main" }
client-audio = { git = "ssh://git@github.com/Rusteze-AP/client-audio.git", branch = "main" }
server = { git = "ssh://git@github.com/Rusteze-AP/server.git", branch = "main" }

logger = { git = "https://github.com/Rusteze-AP/logger.git", branch = "main" }
packet_forge = { git = "ssh://git@github.com/Rusteze-AP/packet-forge.git", branch = "main" }
network-initializer = { git = "ssh://git@github.com/Rusteze-AP/network-initializer.git", branch = "main" }


[build-dependencies]
slint-build = "1.8.0"
